# everyone_pm

./: .env.example  .gitignore  FILE_READ_WRITE.md  INTERACTIVE_CHOICES.md  KEYBOARD_NAVIGATION.md  PROGRESS_INDICATORS.md  README.md  STAGE_MANAGEMENT_FIX.md  WORKFLOW_EXAMPLE.md  main.py  pyproject.toml
design_docs/: 00_master_plan.md  01_prd.md  02_tech_stack.md  03_architecture.md
eopm/: __init__.py  config.py  main.py
eopm/core/: __init__.py  pdf.py  session.py  stage_manager.py  web.py
eopm/llm/: __init__.py  client.py  prompts.py
eopm/ui/: __init__.py  console.py  interactive.py  test_interactive.py
